обновлен класс многопоточного анализа: произведен рефакторинг согласно замечаниям. расширено тестирование многопоточности